--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "devStart": "nodemon devStart"
+    "devStart": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
